sosym18: Create operator to generate experiment scenario part 2